Apply style to project
This commit applies eclipse-style-guide.xml to all java files using
the spotless plugin using:

    ./gradlew spotlessApply