@@ -23,31 +23,31 @@ public class URLStreamHandlerFactory implements java.net.URLStreamHandlerFactory
   static public void install() {
     try {
       if (!installed) {
-        java.net.URL.setURLStreamHandlerFactory( new URLStreamHandlerFactory() );
+        java.net.URL.setURLStreamHandlerFactory(new URLStreamHandlerFactory());
         installed = true;
       }
     } catch (Error e) {
-      log.error("Error installing URLStreamHandlerFactory "+e.getMessage());
+      log.error("Error installing URLStreamHandlerFactory " + e.getMessage());
     }
   }
 
   static public void register(String protocol, URLStreamHandler sh) {
-    map.put( protocol.toLowerCase(), sh);
+    map.put(protocol.toLowerCase(), sh);
   }
 
-  static public URL makeURL( String urlString) throws MalformedURLException {
-    return installed ? new URL( urlString) : makeURL( null, urlString);
+  static public URL makeURL(String urlString) throws MalformedURLException {
+    return installed ? new URL(urlString) : makeURL(null, urlString);
   }
 
-  static public URL makeURL( URL parent, String urlString) throws MalformedURLException {
+  static public URL makeURL(URL parent, String urlString) throws MalformedURLException {
     if (installed)
-      return new URL( parent, urlString);
+      return new URL(parent, urlString);
 
     // install failed, use alternate form of URL constructor
     try {
-      URI uri = new URI( urlString);
-      URLStreamHandler h = map.get( uri.getScheme().toLowerCase());
-      return new URL( parent, urlString, h);
+      URI uri = new URI(urlString);
+      URLStreamHandler h = map.get(uri.getScheme().toLowerCase());
+      return new URL(parent, urlString, h);
     } catch (URISyntaxException e) {
       throw new MalformedURLException(e.getMessage());
     }
@@ -56,31 +56,31 @@ public class URLStreamHandlerFactory implements java.net.URLStreamHandlerFactory
   }
 
   public URLStreamHandler createURLStreamHandler(String protocol) {
-    return map.get( protocol.toLowerCase());
+    return map.get(protocol.toLowerCase());
   }
 
 }
 
 /*
-  // load protocol for ADDE URLs
-  // See java.net.URL for explanation of URL handling
-  static
-  {
-    try
-    {
-      String handlers = System.getProperty("java.protocol.handler.pkgs");
-      String newProperty = null;
-      if (handlers == null)
-        newProperty = "edu.wisc.ssec.mcidas";
-      else if (handlers.indexOf("edu.wisc.ssec.mcidas") < 0)
-        newProperty = "edu.wisc.ssec.mcidas | " + handlers;
-      if (newProperty != null)  // was set above
-        System.setProperty("java.protocol.handler.pkgs", newProperty);
-    }
-    catch (Exception e)
-    {
-      LogStream.out.println(
-        "Unable to set System Property: java.protocol.handler.pkgs");
-    }
-  }
-  */
+ * // load protocol for ADDE URLs
+ * // See java.net.URL for explanation of URL handling
+ * static
+ * {
+ * try
+ * {
+ * String handlers = System.getProperty("java.protocol.handler.pkgs");
+ * String newProperty = null;
+ * if (handlers == null)
+ * newProperty = "edu.wisc.ssec.mcidas";
+ * else if (handlers.indexOf("edu.wisc.ssec.mcidas") < 0)
+ * newProperty = "edu.wisc.ssec.mcidas | " + handlers;
+ * if (newProperty != null) // was set above
+ * System.setProperty("java.protocol.handler.pkgs", newProperty);
+ * }
+ * catch (Exception e)
+ * {
+ * LogStream.out.println(
+ * "Unable to set System Property: java.protocol.handler.pkgs");
+ * }
+ * }
+ */
